--- a/Newtonsoft.Json.Ninject/Newtonsoft.Json.Ninject.nuspec
+++ b/Newtonsoft.Json.Ninject/Newtonsoft.Json.Ninject.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Newtonsoft.Json.Ninject</id>
-    <version>1.0.0-alpha1</version>
+    <version>1.0.0-beta1</version>
     <title>Newtonsoft.Json.Ninject</title>
     <authors>Scott Xu</authors>
     <owners>scott xu</owners>
@@ -18,6 +18,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\Release\**\Newtonsoft.Json.Ninject.dll" target="lib" />
+    <file src="bin\Release\**\Newtonsoft.Json.Ninject.*" target="lib" />
   </files>
 </package>
